# Nibbler

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
application/: CMakeLists.txt  main.cpp
application/private/: main.cpp
application/public/: Common.h  GuiProvider.h
gui_allegro/: AllegroGuiProvider.cpp  AllegroGuiProvider.h  CMakeLists.txt
gui_sdl/: CMakeLists.txt  SDLGuiProvider.cpp  SDLGuiProvider.h  exports.cpp
gui_sfml/: CMakeLists.txt  SFMLGuiProvider.cpp  SFMLGuiProvider.h
gui_sigil/: CMakeLists.txt  SigilGuiProvider.cpp  SigilGuiProvider.h
